--- a/src/app/product/product.page.html
+++ b/src/app/product/product.page.html
@@ -25,7 +25,7 @@
       <hr>
       <p class="des_content">Delivery within 6-7 days.</p>
       <hr class="add_cart_btn">
-      <ion-button style="float: right; left:0% ; margin:0%"  type="button" class="login_btn add_cart_btn"  size="default">Add to Cart</ion-button>
+      <ion-button style="float: right; left:0% ; margin:0%"  type="button" class="login_btn add_cart_btn"  size="default" (click)="addCart()">Add to Cart</ion-button>
     </div>
   </div>
 
