--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar >
-    <ion-title>home</ion-title>
+    <ion-title>Shopizee</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
@@ -34,7 +34,7 @@
         <ion-card-subtitle>{{items.title}}</ion-card-subtitle>
       </ion-card-header> -->
       <ion-card-content class="featured-card-content">
-        <h3 class="card-link-text">View
+        <h3 class="card-link-text" (click)="product(items._id)">View
         <ion-icon name="arrow-forward" item-right color="primary"></ion-icon>
         </h3>
       </ion-card-content>
