--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -29,6 +29,7 @@
     <h4 class="hd">Password</h4>
     <h3 class="vl">***********</h3>
     <h4 class="hd">Address</h4>
+    <h3 class="vl" style="color:#667FEA;"><a routerLink="/address" style="text-decoration: none; outline: none;">Saved Addresses</a></h3>
     <button type="button" class="btn btn-outline-danger btn-lg btn-block" (click)="delete()">Delete Account</button>
 <button type="button" class="btn btn-outline-warning btn-lg btn-block" (click)="logout()">Logout</button>
    <button type="button" class="btn btn-outline-success btn-lg btn-block">Edit Account</button>
