--- a/src/app/address/address.page.html
+++ b/src/app/address/address.page.html
@@ -6,7 +6,7 @@
 
   <ion-spinner *ngIf="signedIn && isLoading" name="bubbles"></ion-spinner>
 
-  <ion-fab-button *ngIf="signedIn && !isLoading" color="transparent" routerLink="/">
+  <ion-fab-button *ngIf="signedIn && !isLoading" color="transparent" routerLink="/tabs/tab3">
     <ion-icon name="arrow-back" class="back_btn_arrow"></ion-icon>
   </ion-fab-button>
   <ion-text *ngIf="signedIn  && !isLoading" style="line-height: 52px;">
