--- a/src/app/categories/categories.page.html
+++ b/src/app/categories/categories.page.html
@@ -1,9 +1,22 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>categories</ion-title>
+  <ion-toolbar >
+    <ion-title>Categories</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <div class="row">
+    <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4" *ngFor="let card of categories">
+      <ion-slide class="ion-activatable ripple-parent category-slide" style="--my-color-var: {{card.color_gradient}};" routerLink="{{card.link}}">
+        <ion-col>
+          <ion-label class="category_labels">{{ card.title }}</ion-label>        
+        </ion-col>
+        <ion-ripple-effect></ion-ripple-effect>
+      </ion-slide>
+    </div>
+  </div>
 
 </ion-content>
