--- a/src/app/featured/featured.page.html
+++ b/src/app/featured/featured.page.html
@@ -21,7 +21,7 @@
               <h1>{{items.title}}</h1>
               <p>£{{items.price}}</p>
             </div>
-            <div class="buy" routerLink="/featured"><ion-icon name="eye"></ion-icon></div>
+            <div class="buy" (click)="product(items._id)"><ion-icon name="eye"></ion-icon></div>
           </ion-card-content>
         </div>
       </div>
